<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/title_add_product"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:accessibilityHeading="false"
        android:background="@color/c_title"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/t_add_product"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_price"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border_background"
        android:ems="10"
        android:hint="@string/ph_price"
        android:textSize="16sp"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_price" />

    <TextView
        android:id="@+id/title_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/t_price"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_stock" />

    <TextView
        android:id="@+id/title_current_stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/t_stock"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_prod_description" />

    <TextView
        android:id="@+id/title_product_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/t_product_description"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_product_name" />

    <TextView
        android:id="@+id/t_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/t_add_image"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_price" />

    <Button
        android:id="@+id/button_picture"
        android:layout_width="90dp"
        android:layout_height="99dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="5dp"
        android:text="@string/plus_sign"
        android:textSize="30sp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_add_image"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/input_product_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border_background"
        android:ems="10"
        android:hint="@string/ph_product_name"
        android:importantForAutofill="no"
        android:inputType="textFilter"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_productname"
        tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/t_submit"
        android:textSize="20sp"
        app:cornerRadius="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/picture_set"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_border_background"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_price"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/title_productname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/t_product_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_add_product" />


    <EditText
        android:id="@+id/input_prod_description"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edittext_border_background"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/ph_prod_description"
        android:importantForAutofill="no"
        android:inputType="textFilter|textMultiLine"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_product_description" />


    <EditText
        android:id="@+id/input_stock"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_border_background"
        android:ems="10"
        android:hint="@string/ph_stock"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_current_stock" />


</androidx.constraintlayout.widget.ConstraintLayout>