<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <TextView
        android:id="@+id/title_signup"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:accessibilityHeading="false"
        android:background="@color/c_title"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/t_sign_up"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/title_signup">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/t_username"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_border_background"
                android:hint="@string/t_username"
                android:inputType="textFilter"
                android:singleLine="true"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/title_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/t_password"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edittext_border_background"
                android:ems="10"
                android:hint="@string/t_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColorHint="#757575"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/title_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/t_firstname"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_firstname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edittext_border_background"
                android:ems="10"
                android:hint="@string/t_firstname"
                android:minHeight="50dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/title_familyname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/t_familyname"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_familyname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/edittext_border_background"
                android:ems="10"
                android:hint="@string/t_familyname"
                android:minHeight="50dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/title_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/t_email_optional"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_border_background"
                android:ems="10"
                android:hint="@string/t_email"
                android:importantForAutofill="no"
                android:minHeight="50dp"
                android:singleLine="true" />

            <Switch
                android:id="@+id/isOwner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Are you an Owner? "
                android:textSize="20sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/t_cancel"
                    android:textSize="20sp"
                    app:cornerRadius="0dp" />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/t_submit"
                    android:textSize="20sp"
                    app:cornerRadius="0dp" />
            </TableRow>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>