<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        >

        <TextView
            android:id="@+id/title_welcome"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="220dp"
            android:fontFamily="serif"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/t_login"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="120dp"
            android:text="@string/t_sign_up"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:cornerRadius="0dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>